GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/Procurement_Saving__c.object-meta.xml
<CustomObject>
    <description>This object is used to store and report on savings realized by the Procurement team.</description>
    <label>Procurement Saving</label>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procurement Savings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>