GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Baked_In__c.field-meta.xml
<CustomField>
    <fullName>Baked_In__c</fullName>
    <label>Baked In (2017)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>