GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Baked_In_Des__c.field-meta.xml
<CustomField>
    <fullName>Baked_In_Des__c</fullName>
    <label>Baked-In Description</label>
    <type>TextArea</type>
</CustomField>