GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Baseline2value__c.field-meta.xml
<CustomField>
    <fullName>Baseline2value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>