GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Baseline_2_description__c.field-meta.xml
<CustomField>
    <fullName>Baseline_2_description__c</fullName>
    <label>Baseline 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>