GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Baseline_type__c.field-meta.xml
<CustomField>
    <fullName>Baseline_type__c</fullName>
    <label>Baseline type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business case (Project)</fullName>
            </value>
            <value>
                <fullName>First quote (Tender)</fullName>
            </value>
            <value>
                <fullName>On-year budget</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>