GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Central Services</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
                <isActive>false</isActive>
                <label>Customer Care</label>
            </value>
            <value>
                <fullName>Customer Services and People</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
                <isActive>false</isActive>
                <label>Facilities</label>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>