GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/CAPEX__c.field-meta.xml
<CustomField>
    <fullName>CAPEX__c</fullName>
    <label>CAPEX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>