GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/CAPEX_savings_description__c.field-meta.xml
<CustomField>
    <fullName>CAPEX_savings_description__c</fullName>
    <label>CAPEX description</label>
    <type>TextArea</type>
</CustomField>