GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Cost_avoidance_year3__c.field-meta.xml
<CustomField>
    <fullName>Cost_avoidance_year3__c</fullName>
    <label>Cost avoidance (2019)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>