GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/One_Off_2018__c.field-meta.xml
<CustomField>
    <fullName>One_Off_2018__c</fullName>
    <inlineHelpText>Non recurrent savings</inlineHelpText>
    <label>One Off 2018</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>