GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/One_Off_2019__c.field-meta.xml
<CustomField>
    <fullName>One_Off_2019__c</fullName>
    <label>One Off 2019</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>