GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Opportunity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Start_Date__c</fullName>
    <description>Date when the opportunity came to life. This is not the realization date of the opportunity.</description>
    <label>Opportunity Start Date</label>
    <type>Date</type>
</CustomField>