GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Opportunity_type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_type__c</fullName>
    <label>Opportunity type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Renegotiation</fullName>
            </value>
            <value>
                <fullName>Contract Renewal</fullName>
            </value>
            <value>
                <fullName>Demand Reduction/Contract Termination</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>