GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/P_L_year4__c.field-meta.xml
<CustomField>
    <fullName>P_L_year4__c</fullName>
    <label>P&amp;L (2020)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>