GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <description>Pipeline of savings for the current year</description>
    <label>Pipeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>