GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Pipeline_probability__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_probability__c</fullName>
    <inlineHelpText>How likely is it that you will deliver that?</inlineHelpText>
    <label>Pipeline probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>