GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Realization_start_month__c.field-meta.xml
<CustomField>
    <fullName>Realization_start_month__c</fullName>
    <inlineHelpText>Which month will these savings start to be realized?
Enter month number. For example, &quot;5&quot; if May.</inlineHelpText>
    <label>Realization start month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>