GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Realized_starting_this_year__c.field-meta.xml
<CustomField>
    <fullName>Realized_starting_this_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Realized starting this year?</label>
    <type>Checkbox</type>
</CustomField>