GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Savings_2017__c.field-meta.xml
<CustomField>
    <fullName>Savings_2017__c</fullName>
    <formula>Baked_In_2017__c  +  CAPEX__c  +  Cost_avoidance_2017__c +  P_L_2017__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Savings 2017</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>