GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Savings_2020__c.field-meta.xml
<CustomField>
    <fullName>Savings_2020__c</fullName>
    <formula>Baked_In_2020__c + Cost_avoidance_2020__c +  P_L_year4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Savings 2020</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>