GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Savings_period__c.field-meta.xml
<CustomField>
    <fullName>Savings_period__c</fullName>
    <inlineHelpText>Number of months for which the period of savings apply.
It can be length of a negotiated contract.
For example, if 3 years, insert &quot;36&quot;</inlineHelpText>
    <label>Savings period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>