GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Savings_this_year__c.field-meta.xml
<CustomField>
    <fullName>Savings_this_year__c</fullName>
    <formula>IF( YEAR(DATEVALUE(CreatedDate) ) = 2018 , One_Off_2018__c, One_Off_2017__c) + IF( Realized_starting_this_year__c  = false, 0, IF( (  Realization_start_month__c  +  Savings_period__c  )  &lt; 12,  Total_Recurrent__c , ( Total_Recurrent__c  /  Savings_period__c  )  *  ( 12 -  Realization_start_month__c+1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Savings this year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>