GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Savings_thisyear__c.field-meta.xml
<CustomField>
    <fullName>Savings_thisyear__c</fullName>
    <formula>Baked_In__c  +  CAPEX__c  +  Cost_avoidance_this_year__c +  P_L_this_year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Savings 2017</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>