GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Savings_year3__c.field-meta.xml
<CustomField>
    <fullName>Savings_year3__c</fullName>
    <formula>Baked_In_2019__c  +  Cost_avoidance_2019__c  +  P_L_year3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Savings 2019</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>