GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Savings_year_3__c.field-meta.xml
<CustomField>
    <fullName>Savings_year_3__c</fullName>
    <formula>IF( YEAR(DATEVALUE(CreatedDate) ) = 2018 , One_Off_2020__c, One_Off_2019__c)  + IF(Realized_starting_this_year__c  = true,  IF((Realization_start_month__c  +  Savings_period__c)  &lt;= 24, 0,  IF((Realization_start_month__c  +  Savings_period__c) &gt; 36, (Total_Recurrent__c  /  Savings_period__c) * 12, (Total_Recurrent__c  /  Savings_period__c) * (Realization_start_month__c  +  Savings_period__c-24)) ) , IF((Realization_start_month__c  +  Savings_period__c)&lt;= 13, 0,  IF((Realization_start_month__c  +  Savings_period__c) &gt;= 24, (Total_Recurrent__c  /  Savings_period__c) * 12, (Total_Recurrent__c  /  Savings_period__c) * ((Realization_start_month__c  +  Savings_period__c)-13) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Savings year 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>