GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Savings_year_5__c.field-meta.xml
<CustomField>
    <fullName>Savings_year_5__c</fullName>
    <formula>IF( YEAR(DATEVALUE(CreatedDate) ) = 2018 , One_Off_2022__c, One_Off_2021__c)  + IF( Realized_starting_this_year__c  = true,  IF(( Realization_start_month__c  +  Savings_period__c ) &lt; 48, 0, ( Total_Recurrent__c  /  Savings_period__c)  * ( Realization_start_month__c  +  Savings_period__c  - 48-1)) ,  IF( (Realization_start_month__c  +  Savings_period__c) &lt; 36 , 0,   IF(( Savings_period__c  +  Realization_start_month__c -1) &gt; 48,  (Total_Recurrent__c /  Savings_period__c )  * 12,  (Total_Recurrent__c /  Savings_period__c )  *  (  Realization_start_month__c  +  Savings_period__c -36)) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Savings year 5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>