GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Sign_Off_slides_Savigns_calculation__c.field-meta.xml
<CustomField>
    <fullName>Sign_Off_slides_Savigns_calculation__c</fullName>
    <inlineHelpText>Link to Box showing calculation of savings so as to get it approved by FAM.</inlineHelpText>
    <label>Savings calculation details</label>
    <type>Url</type>
</CustomField>