GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Total_baseline__c.field-meta.xml
<CustomField>
    <fullName>Total_baseline__c</fullName>
    <formula>Baseline1value__c  +  Baseline2value__c  +  Baseline3value__c  +  Baseline4value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total baseline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>