GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Total_Recurrent__c.field-meta.xml
<CustomField>
    <fullName>Total_Recurrent__c</fullName>
    <inlineHelpText>Sum of all phased savings across life of the contract.
For example, if £10k/ months for a 3 years contract, it will be £36,000.
This should NOT include one-off benefits.</inlineHelpText>
    <label>Total Phased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>