GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/fields/Total_savings__c.field-meta.xml
<CustomField>
    <fullName>Total_savings__c</fullName>
    <formula>Baked_In_2022__c  + Baked_In_2018__c + Baked_In_2019__c + Baked_In_2020__c + Baked_In_2021__c + CAPEX__c +  Cost_avoidance_2022__c  + Cost_avoidance_2018__c + Cost_avoidance_2019__c + Cost_avoidance_2020__c + Cost_avoidance_2021__c +  P_L_2022__c + P_L_2018__c + P_L_year3__c + P_L_year4__c + P_L_2021__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of all savings across the life of the contract</inlineHelpText>
    <label>Total savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>