GearsetPOC/force-app/main/default/objects/Procurement_Saving__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_type__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Pipeline__c</columns>
    <columns>CAPEX__c</columns>
    <columns>Business_Lead__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>